--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -29,7 +29,7 @@ body:
         - Firefox
         - Chrome
         - Safari
-        - Microsoft Edge
+        - Edge
         - Other
     validations:
       required: true
