--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -25,6 +25,7 @@ body:
   - type: dropdown
     attributes:
       label: What browser are you seeing the problem on?
+      multiple: true
       options:
         - Firefox
         - Chrome
